# airbnb

./: README.md
backend/: pyproject.toml
backend/bookings/: admin.py  models.py  serializers.py
backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
backend/categories/: models.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/direct_messages/: admin.py  models.py
backend/direct_messages/migrations/: 0001_initial.py
backend/experiences/: admin.py  models.py  views.py
backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_experience_host_and_more.py
backend/houses/: admin.py  models.py
backend/houses/migrations/: 0001_initial.py  0002_initial.py
backend/medias/: models.py  views.py
backend/medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
backend/reviews/: admin.py  models.py  serializers.py
backend/reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
backend/rooms/: admin.py  models.py  serializers.py  views.py
backend/rooms/migrations/: 0001_initial.py  0002_room_category_alter_room_amenities_alter_room_owner.py  0003_alter_room_amenities.py
backend/rooms/templates/: all_rooms.html
backend/users/: admin.py  models.py  views.py
backend/users/migrations/: 0001_initial.py
backend/wishlists/: models.py  serializers.py  views.py
backend/wishlists/migrations/: 0001_initial.py  (+1 more)
